Retrieve beans returns Stream<T> instead of List<T>. (#93)